fix(footer): remove gap between heart and text

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -952,7 +952,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  gap: 16px;
+  gap: 0px;
   line-height: 1.2;
 }
 
